resources/skins.minerva.base.styles/ui.less
@import "minerva.variables";
@import "minerva.mixins";
@import "mediawiki.mixins";

@topBarBackgroundColor: #F3F3F3;

html,
body {
	// Ensure overlays take up full screen
	height: 100%;
}

#content_wrapper {
	border-top: 1px solid @grayLight;

	.last-modified-bar {
		background-color: @colorGray14;
		padding: 0 @contentMargin;
		display: block;
		color: @colorGray6;
		a {
			color: @colorGray6;
			// If browser supports
			&:nth-child(2) {
				font-weight: bold;
			}
		}

		&.active {
			background-color: #00AF8B;
			color: #fff;
			a {
				color: #fff;
			}
		}
	}
}

.header {
	display: table;
	width: 100%;
	height: @headerHeight;
	white-space: nowrap;

	> a {
		width: @headerHeight;
	}

	// Left and right menu links
	> a,
	// Search field
	> form,
	// Spinner
	> div {
		vertical-align: middle;
		display: table-cell;
	}

	// Search
	> form {
		padding: .15em @headerTitlePaddingH 0;
		width: auto;
		vertical-align: middle;
	}

	> .header-title {
		vertical-align: middle;
	}

}

// Make search input more visible for users on small screens.
// Opera Mini doesn't support placeholders.
@media all and (max-width: @wgMFDeviceWidthMobileSmall) {
	.header {
		.search {
			border: 1px solid @grayLight;
			padding: .3em .1em;
		}
	}
}

// Add border between notices and header
.mw-dismissable-notice {
	border-bottom: 1px solid @grayLight;
}

// Used for messages on page lists and uploads and when showing old revisions
.alert.warning {
	color: @colorWarningText;
	background: @colorWarningBackground;
}

// Used for messages on login screen (They're more informational than actual warnings.)
.warningbox {
	border: 1px solid @colorGray12;
	background-color: @colorGray14;
	color: @grayDark;
}

.successbox {
	color: @colorSuccessText;
	background: @colorSuccessBackground;
}

.alert {
	padding: 1em @contentMargin;
	margin: 0 0 1em;

	h2 {
		font: bold 100% @fontFamily;
		padding: 0;
		margin: 0 0 .5em 0;
	}

	// used e.g. in EditorOverlay
	a {
		margin-bottom: 1em;
	}
}

/* Search */

.client-use-basic-search,
.client-nojs {
	.header {
		.search,
		.fulltext-search {
			float: left;
		}

		.search {
			// Assume the smallest possible screen size.
			// We want people to be able to search we don't care if it looks pretty.
			width: 80px;
			margin-right: 8px;
		}
	}
}

input.search {
	outline: 0;
	width: 100%;
	// FIXME: unable to check but the important may not be needed for Nokia S60;
	background-color: #fff !important; /* remove fennec default background also see bug 36490 */
	// get rid of rounded corners in Safari
	-webkit-appearance: none;
	// get rid of X in Chrome
	&::-webkit-search-cancel-button {
		-webkit-appearance: none;
	}
}

// FIXME: remove when micro.tap in stable and rule from common-js.less too
.search-box {
	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
}

.content {
	// Correct icon sizes of edit icon when using mw-ui-icon.
	h1 {
		.edit-page {
			font-size: 1 / @fontSizeH1;
		}
	}

	h2 {
		// Clear table of contents and any other floated elements in desktop Minerva.
		clear: both;

		.edit-page {
			font-size: 1 / @fontSizeH2;
		}
	}

	h3 {
		.edit-page {
			font-size: 1 / @fontSizeH3;
		}
	}

	.edit-page {
		display: none;
		top: 0;
		bottom: 0;
		right: 0;
	}

	// edit pencils for section headings (collapsible)
	.collapsible-heading {
		.edit-page {
			position: absolute;
		}
	}

	// show edit section pencils on section headings inside collapsible blocks
	.in-block {
		position: relative;

		> .edit-page {
			display: none;
			// edit pencils for inline/sub-section headings - bug T90245
			position: relative;
			float: right;
		}
	}

	.open-block {
		// Restrict to child so that child section edit links do not get revealed.
		> .edit-page {
			display: block;
		}
	}
}

.stable {
	// Remove when/if page-secondary-actions are promoted to stable
	.languageSelector {
		margin-top: 1em;
	}
}

#page-secondary-actions {
	a {
		margin: 10px 2px 2px 0;
	}
}
.truncated-text {
	white-space: nowrap;
	overflow: hidden;
	-webkit-text-overflow: ellipsis;
	text-overflow: ellipsis;

	// FIXME: this works only in WebKit
	&.multi-line {
		white-space: normal;
		display: -webkit-box;
		-webkit-box-orient: vertical;
	}

	&.two-line {
		-webkit-line-clamp: 2;
		// fallback for non-WebKit
		max-height: 2.6em;
	}
}

// FIXME: Create generic class to represent both of these headers
.overlay,
.header {

	// need to specify id or else other rules are more important
	// FIXME: simplify when .icon class from Overlay used instead
	#secondary-button.user-button,
	.user-button {
		// Make sure count is positioned correctly in relation to bell icon
		position: relative;

		// can't use display:none class as icons must have a label to retain height
		.label {
			visibility: hidden;
		}

		&.loading span {
			display: none;
		}
	}
}

.notification-count {
	text-indent: 0;
	display: inline-block;
	font-weight: bold;
	color: #fff;
	background: #c91f2c;
	border-radius: 2px;
	height: 1.2em;
	line-height: 1.2em;
	min-width: 1em;
	margin: .6em .6em 0 0;
	padding: 0 0.1em;
	text-align: center;
	position: absolute;
	right: 0;
	top: -.1em;

	&.zero {
		display: none;
	}

	// FIXME: There must be a better way of doing this
	&.max {
		right: .2em;
		width: 2em;
		height: 2em;
		line-height: 2em;
		font-size: 0.7em;
	}
}

// FIXME [mediawiki ui] These rules should not be needed in the mobile context
.mw-ui-button-group {
	text-align: center;

	* {
		float: none !important;
	}

	// For talk and CTA drawer
	.mw-ui-block {
		width: auto;
	}
}

// FIXME: identify why this is here.
.alpha {
	.spinner {
		margin: auto;
	}
}

.alpha {
	.header {
		background-color: #fff;
		position: relative;

		> .header-title {
			// align the text in the middle regardless of whether the notification icon exists or not
			bottom: 0;
			left: @headerHeight;
			position: absolute;
			right: @headerHeight;
			text-align: center;
			top: 0;
			a {
				display: block;
				line-height: @headerHeight;
				text-decoration: none;
			}
		}
	}
}

.alpha,
.beta {
	#page-secondary-actions {
		&:before {
			content: "";
			display: block;
			clear: both;
		}
	}
}

.client-nojs {
	// alpha uses a magnifying glass as the search button so it doesn't need this styling
	.stable,
	.beta {
		.header {
			.search {
				// FIXME: padding values should be variables
				// vertically align the search input
				padding: 0.5em 1em; // same as the search button (mw-ui-button) padding
			}
		}
	}
}

